# pdf-to-lca-material

./: .gitignore  README.md  lca-basics.py  main.py  material_model.py  materials_repository.py  pdf_to_text.py  pyproject.toml  requirements.txt  rows_from_str.py  todo.md
src/lca_vibeke/: main.py  pdf_to_text.py
src/pdf_to_lca_materials/: main.py
src/pdf_to_lca_materials/rlca_client/: client.py  indicator.py  lcia_result.py  material.py  test_material.py
