[project]
name = "pdf-to-lca-materials"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
dependencies = [
    "instructor>=1.2.5",
    "joblib>=1.4.2",
    "marimo>=0.4.10",
    "openai>=1.25.0",
    "polars>=0.20.23",
    "pypdf2>=3.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lca_vibeke"]
